--- a/to-do/src/App.css
+++ b/to-do/src/App.css
@@ -1,14 +1,91 @@
 .App {
   align-content: center;
   text-align: center;
+  font-family: "Veranda", sans-serif;
+
+}
+html {
+  font-family: "Veranda", sans-serif;
+  background: #7857b65d;
 }
 
 body{
   align-content: center;
   text-align: center;
+  font-family: "Veranda", sans-serif;
+
 
 }
 
-.button{
+taskArray{
+ font-family: "Veranda", sans-serif;
+}
+
+
+ul {
+  list-style-type: none;
+  padding: 1;
 
 }
+
+li{
+  align-content: center;
+  text-align: left;
+  padding: 5px 10px;
+  background-color: #EEEEEE;
+  border: 1px solid #DDDDDD;
+}
+
+
+
+.li {
+  margin: 50px auto;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 10px 10px 0 rgba(0,0,0,0.1);
+}
+.tasks {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #F1F1F1;
+}
+.tasks:last-child {
+  border-bottom: 0;
+}
+input:checked + p {
+  background: #F9F9F9;
+  text-decoration: line-through;
+}
+input[type="checkbox"] {
+  margin: 20px;
+  
+}
+p {
+  margin: 0;
+  padding: 20px;
+  transition: background 0.2s;
+  flex: 1;
+  font-family: "Veranda", sans-serif;
+  font-size: 20px;
+  font-weight: 200;
+  border-left: 1px solid #D1E2FF;
+}
+
+button {
+  background-color:#33025c;
+  color: #fff;
+  border:none; 
+  border-radius:10px; 
+  padding:15px;
+  min-height:10px; 
+  min-width: 50px;
+  margin: 10px;
+}
+
+
+input {
+  padding:15px;
+  min-height:10px;
+  font-size: medium; 
+}
+
